--- a/views/feedback.ejs
+++ b/views/feedback.ejs
@@ -28,63 +28,58 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a href="/" class="navbar-brand">The Weeknd</a>
+            <a href="/" style="color:black;" class="navbar-brand">The Weeknd</a>
           </div>
           <div class="collapse navbar-collapse" id="navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="/">Home</a></li>
+              <li><a style="color:black" href="/">Home</a></li>
                 <li><a href="/albums" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Albums <span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="/albums">All Albums</a></li>
+                    <li><a style="color:black;" href="/albums">All Albums</a></li>
                     <li role="separator" class="divider"></li>
                   </ul>
               </li>
-              <li><a href="/feedback">Feedback</a></li>
-              <li><a href="/chat">Chat</a></li>
+              
+              
             </ul><!-- nav -->
           </div><!-- navbar-collapse -->
         </div><!-- container -->
       </nav>
     </header>
-
     <div class="container">
-      <div class="row">
-        <div class="col-sm-8">
-          <div class="maincontent">
+        <div class="row">
+          <div class="col-sm-4">
+            <h1 class="feedback-form-title">Send us feedback</h1>
+            <form class="feedback-form">
+              <div class="form-group">
+                <label for="feedback-form-name">Name</label>
+                <input name="name" type="text" class="form-control" id="feedback-form-name" placeholder="Enter your name">
+              </div>
+              <div class="form-group">
+                <label for="feedback-form-title">Title</label>
+                <input type="text" class="form-control" id="feedback-form-title" placeholder="Title of your feedback">
+              </div>
+              <div class="form-group">
+                  <label for="feedback-form-message">Message</label>
+                  <textarea type="text" placeholder="Enter your message, then hit the submit"  class="form-control" id="feedback-form-message" rows="6"></textarea>
+              </div>
+              <input type="submit" value="submit" class="btn btn-default pull-right">Submit</in>
+            </form>
+          </div><!-- primary -->
+          <aside class="col-sm-8">
+            <div class="maincontent feedback">
+                <h2 class="article-title">Recent Feedback</h2>
+                <div class="feedback-messages">
 
-            <article class="article">
-              <h1 style="color:black;" class="article-title">The Weeknd</h1>
-                <p>The Weeknd, originally Abel Tesaye, broke into the music scene with the 2011 mistape <i>House of Ballons</i>. He went on to work with <u>Drake</u>, <u>Wiz Kahlifa</u> and others, while building his own career as an artist. In 2015, The Weeknd enjoyed huge success with the Grammy winning album <i>Beauty Behind The Madness</i>, which boastes the hit single "Can't Feel My Face." His follow-up album, <i>Starboy</i>(2016), also won a Grammy and featured collabs with artist as Daft Punk. </p>
-                <p>Born Abel tesfaye on February 16, 1990, in Toronto, Canada, The Weeknd has become one of the music industry's leading alternative R&B performers. Hes is the son of Ethiopian immigrants but has had little contact with his father, who lefft the family when The Weeknd was only a toddler. His early musical influences ranged from traditional Ethiopian music to the "King of Pop", <u>Michael Jackson</u>.</p>
-            </article><!-- article -->
-
-
-            
-
-          </div>
-        </div><!-- primary -->
-        <aside class="col-sm-4">
-          <article class="sidebar">
-            <h1 class="sidebar-title">Awards and Nominations</h1>
-            <ul class="sidebar-body">
-              <li>Won 2 American Music Awards, Nominated 10 times for an AMA in different categories</li>
-              <li>Latin Ameriacan Music Awards - Nominated</li>
-              <li>Won 4 ASCAP Awards</li>
-              <li>Won 9 Billboard Music Awards out of 37 Nominations</li>
-              <li><b>Won 3 Grammy's out of 10 Nominations</b></li>
-              <li>Won 2 Guiness World Records</li>
-              
-            </ul>
-          </article><!-- article -->
-        </aside><!-- secondary -->
-      </div>
+                </div>
+            </div>
+            </aside><!-- secondary -->
+        </div>
     </div><!-- container -->
-    <script
-  src="https://code.jquery.com/jquery-3.4.1.min.js"
-  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-  crossorigin="anonymous"></script>
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-
+    <script src="/js/feedback.js"></script>
     <!-- <script src="/js/pixgrid.js"></script>
     <script src="/reload/reload.js"></script> -->
   </body>
