--- a/views/feedback.ejs
+++ b/views/feedback.ejs
@@ -63,7 +63,7 @@
                   <label for="feedback-form-message">Message</label>
                   <textarea type="text" placeholder="Enter your message, then hit the submit"  class="form-control" id="feedback-form-message" rows="6"></textarea>
               </div>
-              <input type="submit" value="submit" class="btn btn-default pull-right">Submit</in>
+              <input type="submit" value="submit" class="btn btn-default pull-right"></in>
             </form>
           </div><!-- primary -->
           <aside class="col-sm-8">
